--- a/assets/css/medium-lightbox.css
+++ b/assets/css/medium-lightbox.css
@@ -92,7 +92,7 @@ figure.full{
 .zoom-effect .zoomImg,
 .zoom-effect .zoomImg-wrap {
 	position: relative;
-	z-index: 900;
+	z-index: 9999;
 	transition: all 300ms;
 }
 
@@ -116,7 +116,7 @@ figure.full{
 }
 
 .zoom-effect .zoomOverlay {
-	z-index: 800;
+	z-index: 8999;
 	background: #fff;
 	position: absolute;
 	transition: opacity 300ms;
